force-app/main/default/objects/Research_Study__c/Research_Study__c.object-meta.xml
<CustomObject>
    <label>Research Study</label>
    <nameField>
        <displayFormat>Study {0000}</displayFormat>
        <label>Research Study Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Research Studies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>