force-app/main/default/objects/Research_Study__c/fields/Principle_Researcher__c.field-meta.xml
<CustomField>
    <fullName>Principle_Researcher__c</fullName>
    <label>Principle Researcher</label>
    <length>100</length>
    <type>Text</type>
</CustomField>