force-app/main/default/objects/Research_Study__c/fields/Research_Animal__c.field-meta.xml
<CustomField>
    <fullName>Research_Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Research Animal</label>
    <referenceTo>Research_Animal__c</referenceTo>
    <relationshipLabel>Research Studies</relationshipLabel>
    <relationshipName>Research_Studies</relationshipName>
    <type>Lookup</type>
</CustomField>