force-app/main/default/objects/Research_Study__c/fields/Study_Box_URL__c.field-meta.xml
<CustomField>
    <fullName>Study_Box_URL__c</fullName>
    <label>Study Box URL</label>
    <type>Url</type>
</CustomField>