force-app/main/default/objects/Research_Study__c/fields/Study_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Name__c</fullName>
    <label>Study Name</label>
    <type>TextArea</type>
</CustomField>