force-app/main/default/objects/Research_Study__c/fields/Study_Status__c.field-meta.xml
<CustomField>
    <fullName>Study_Status__c</fullName>
    <label>Study Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>