force-app/main/default/objects/Research_Study__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Study_Name__c</columns>
    <columns>Study_Status__c</columns>
    <columns>Study_Box_URL__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>